devtools/laymos/test/fixtures/story-ejection/invalid/incomplete-decision.ts
import { decision, when } from 'laymos/story';

export const value = decision('Choice', {}, input).pipe(
  when('a', {}, () => effect),
);
